--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hybrid-base",
+  "name": "hybrid-sample",
   "version": "0.1.0",
-  "description": "The Hybrid Base theme with modern build tools.",
+  "description": "The Hybrid Sample theme with modern build tools.",
   "main": "gulpfile.js",
   "dependencies": {
     "autoprefixer": "^6.3.1",
@@ -11,6 +11,7 @@
     "gulp-autoprefixer": "*",
     "gulp-bump": "^2.7.0",
     "gulp-cached": "*",
+    "gulp-clean-css": "^3.4.0",
     "gulp-cssbeautify": "^0.1.3",
     "gulp-cssnano": "^2.1.0",
     "gulp-filter": "*",
@@ -33,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/seothemes/hybrid-base"
+    "url": "git+https://github.com/seothemes/hybrid-sample"
   },
   "keywords": [
     "theme"
@@ -41,7 +42,7 @@
   "author": "Seo Themes",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/seothemes/hybrid-base/issues"
+    "url": "https://github.com/seothemes/hybrid-sample/issues"
   },
-  "homepage": "https://github.com/seothemes/hybrid-base#readme"
+  "homepage": "https://github.com/seothemes/hybrid-sample#readme"
 }
